src/integration.h

typedef struct libia_params libia_params;
typedef struct libia_runtime libia_runtime;
typedef struct libia_chat_message {
    const char *role;
    const char *content;
    const char *reasoning_content;
} libia_chat_message;
typedef enum libia_generation_kind {
    LIBIA_GENERATION_KIND_CONTENT = 0,
    LIBIA_GENERATION_KIND_REASONING = 1,
    LIBIA_GENERATION_KIND_TOOL_CALL = 2,
} libia_generation_kind;
typedef void (*libia_stream_callback)(libia_generation_kind kind, const char *text, int32_t mode, int32_t tps, void *user_data);
LIBIA_API bool libia_params_set_model_path(libia_params *params, const char *path, char **error_out);
LIBIA_API bool libia_params_get_model_path(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_mmproj_path(libia_params *params, const char *path, char **error_out);
LIBIA_API bool libia_params_get_mmproj_path(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_prompt(libia_params *params, const char *prompt, char **error_out);
LIBIA_API bool libia_params_get_prompt(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_system_prompt(libia_params *params, const char *prompt, char **error_out);
LIBIA_API bool libia_params_get_system_prompt(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_chat_template(libia_params *params, const char *value, char **error_out);
LIBIA_API bool libia_params_get_chat_template(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_use_jinja(libia_params *params, bool value, char **error_out);
LIBIA_API bool libia_params_get_use_jinja(const libia_params *params, bool *out_value);
LIBIA_API bool libia_params_set_reasoning_format(libia_params *params, const char *value, char **error_out);
LIBIA_API bool libia_params_get_reasoning_format(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_enable_reasoning(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_enable_reasoning(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_enable_thinking(libia_params *params, bool value, char **error_out);
LIBIA_API bool libia_params_get_enable_thinking(const libia_params *params, bool *out_value);
LIBIA_API bool libia_params_set_input_prefix(libia_params *params, const char *value, char **error_out);
LIBIA_API bool libia_params_get_input_prefix(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_input_suffix(libia_params *params, const char *value, char **error_out);
LIBIA_API bool libia_params_get_input_suffix(const libia_params *params, const char **out_value);
LIBIA_API bool libia_params_set_n_predict(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_n_predict(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_n_ctx(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_n_ctx(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_n_batch(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_n_batch(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_n_ubatch(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_n_ubatch(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_n_keep(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_n_keep(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_seed(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_seed(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_temp(libia_params *params, double value, char **error_out);
LIBIA_API bool libia_params_get_temp(const libia_params *params, double *out_value);
LIBIA_API bool libia_params_set_top_k(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_top_k(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_top_p(libia_params *params, double value, char **error_out);
LIBIA_API bool libia_params_get_top_p(const libia_params *params, double *out_value);
LIBIA_API bool libia_params_set_min_p(libia_params *params, double value, char **error_out);
LIBIA_API bool libia_params_get_min_p(const libia_params *params, double *out_value);
LIBIA_API bool libia_params_set_image_min_tokens(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_image_min_tokens(const libia_params *params, int64_t *out_value);
LIBIA_API bool libia_params_set_image_max_tokens(libia_params *params, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_image_max_tokens(const libia_params *params, int64_t *out_value);
LIBIA_API libia_runtime *libia_runtime_create(const libia_params *params);
LIBIA_API void           libia_runtime_free(libia_runtime *runtime);
LIBIA_API bool           libia_runtime_is_loaded(const libia_runtime *runtime);
LIBIA_API bool           libia_runtime_load(libia_runtime *runtime, char **error_out);
LIBIA_API void           libia_runtime_unload(libia_runtime *runtime);
LIBIA_API void           libia_runtime_cancel(libia_runtime *runtime);
LIBIA_API void           libia_runtime_cancel_all(void);
LIBIA_API void           libia_runtime_clear_media(libia_runtime *runtime);
LIBIA_API bool           libia_runtime_add_media_file(libia_runtime *runtime, const char *path, char **error_out);
LIBIA_API bool           libia_runtime_supports_image(const libia_runtime *runtime);
LIBIA_API bool           libia_runtime_supports_audio(const libia_runtime *runtime);
LIBIA_API bool           libia_runtime_supports_video(const libia_runtime *runtime);
LIBIA_API bool           libia_runtime_supports_thinking(const libia_runtime *runtime);
LIBIA_API char          *libia_runtime_media_caps_json(const libia_runtime *runtime);
LIBIA_API char          *libia_runtime_chat_template_caps_json(const libia_runtime *runtime);
LIBIA_API char *libia_runtime_generate_prompt(libia_runtime *runtime, const char *prompt, int64_t n_predict_override, char **error_out);
LIBIA_API char *libia_runtime_generate_chat(libia_runtime *runtime, const libia_chat_message *messages, size_t n_messages, int64_t n_predict_override, char **error_out);
LIBIA_API char *libia_runtime_generate_chat_stream(libia_runtime *runtime, const libia_chat_message *messages, size_t n_messages, int64_t n_predict_override, libia_stream_callback on_text, void *user_data, char **error_out);
LIBIA_API int64_t        libia_runtime_last_context_tokens(const libia_runtime *runtime);
LIBIA_API int64_t        libia_runtime_last_generated_tokens(const libia_runtime *runtime);
LIBIA_API int32_t        libia_runtime_last_tokens_per_second(const libia_runtime *runtime);
LIBIA_API char *libia_runtime_tokenize_text(libia_runtime *runtime, const char *text, bool add_special, bool parse_special, char **error_out);
LIBIA_API char *libia_runtime_detokenize_csv(libia_runtime *runtime, const char *tokens_csv, bool special, char **error_out);
LIBIA_API char *libia_runtime_system_info(const libia_runtime *runtime);
LIBIA_API const char *libia_runtime_last_error(const libia_runtime *runtime);