client-rust/lib-rust/src/ffi.rs


    pub fn libia_params_set_model_path(
        params: *mut libia_params,
        path: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_model_path(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_mmproj_path(
        params: *mut libia_params,
        path: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_mmproj_path(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_prompt(
        params: *mut libia_params,
        prompt: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_prompt(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_system_prompt(
        params: *mut libia_params,
        prompt: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_system_prompt(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_chat_template(
        params: *mut libia_params,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_chat_template(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_use_jinja(
        params: *mut libia_params,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_use_jinja(params: *const libia_params, out_value: *mut bool) -> bool;
    pub fn libia_params_set_reasoning_format(
        params: *mut libia_params,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_reasoning_format(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_enable_reasoning(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_enable_reasoning(
        params: *const libia_params,
        out_value: *mut c_longlong,
    ) -> bool;
    pub fn libia_params_set_enable_thinking(
        params: *mut libia_params,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_enable_thinking(
        params: *const libia_params,
        out_value: *mut bool,
    ) -> bool;
    pub fn libia_params_set_input_prefix(
        params: *mut libia_params,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_input_prefix(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_input_suffix(
        params: *mut libia_params,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_input_suffix(
        params: *const libia_params,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_n_predict(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_n_predict(
        params: *const libia_params,
        out_value: *mut c_longlong,
    ) -> bool;
    pub fn libia_params_set_n_ctx(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_n_ctx(params: *const libia_params, out_value: *mut c_longlong) -> bool;
    pub fn libia_params_set_n_batch(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_n_batch(
        params: *const libia_params,
        out_value: *mut c_longlong,
    ) -> bool;
    pub fn libia_params_set_n_ubatch(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_n_ubatch(
        params: *const libia_params,
        out_value: *mut c_longlong,
    ) -> bool;
    pub fn libia_params_set_n_keep(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_n_keep(params: *const libia_params, out_value: *mut c_longlong)
    -> bool;
    pub fn libia_params_set_seed(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_seed(params: *const libia_params, out_value: *mut c_longlong) -> bool;
    pub fn libia_params_set_temp(
        params: *mut libia_params,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_temp(params: *const libia_params, out_value: *mut c_double) -> bool;
    pub fn libia_params_set_top_k(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_top_k(params: *const libia_params, out_value: *mut c_longlong) -> bool;
    pub fn libia_params_set_top_p(
        params: *mut libia_params,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_top_p(params: *const libia_params, out_value: *mut c_double) -> bool;
    pub fn libia_params_set_min_p(
        params: *mut libia_params,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_min_p(params: *const libia_params, out_value: *mut c_double) -> bool;
    pub fn libia_params_set_image_min_tokens(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_image_min_tokens(
        params: *const libia_params,
        out_value: *mut c_longlong,
    ) -> bool;
    pub fn libia_params_set_image_max_tokens(
        params: *mut libia_params,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_image_max_tokens(
        params: *const libia_params,
        out_value: *mut c_longlong,
    ) -> bool;

    pub fn libia_runtime_create(params: *const libia_params) -> *mut libia_runtime;
    pub fn libia_runtime_free(runtime: *mut libia_runtime);
    pub fn libia_runtime_is_loaded(runtime: *const libia_runtime) -> bool;
    pub fn libia_runtime_load(runtime: *mut libia_runtime, error_out: *mut *mut c_char) -> bool;
    pub fn libia_runtime_unload(runtime: *mut libia_runtime);
    pub fn libia_runtime_cancel(runtime: *mut libia_runtime);
    pub fn libia_runtime_cancel_all();
    pub fn libia_runtime_clear_media(runtime: *mut libia_runtime);
    pub fn libia_runtime_add_media_file(
        runtime: *mut libia_runtime,
        path: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_runtime_supports_image(runtime: *const libia_runtime) -> bool;
    pub fn libia_runtime_supports_audio(runtime: *const libia_runtime) -> bool;
    pub fn libia_runtime_supports_video(runtime: *const libia_runtime) -> bool;
    pub fn libia_runtime_media_caps_json(runtime: *const libia_runtime) -> *mut c_char;

    pub fn libia_runtime_generate_prompt(
        runtime: *mut libia_runtime,
        prompt: *const c_char,
        n_predict_override: c_longlong,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn libia_runtime_generate_chat(
        runtime: *mut libia_runtime,
        messages: *const libia_chat_message,
        n_messages: usize,
        n_predict_override: c_longlong,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn libia_runtime_generate_chat_stream(
        runtime: *mut libia_runtime,
        messages: *const libia_chat_message,
        n_messages: usize,
        n_predict_override: c_longlong,
        on_text: libia_stream_callback,
        user_data: *mut c_void,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn libia_runtime_last_context_tokens(runtime: *const libia_runtime) -> c_longlong;
    pub fn libia_runtime_last_generated_tokens(runtime: *const libia_runtime) -> c_longlong;
    pub fn libia_runtime_last_tokens_per_second(runtime: *const libia_runtime) -> c_double;
    pub fn libia_runtime_supports_thinking(runtime: *const libia_runtime) -> bool;
    pub fn libia_runtime_chat_template_caps_json(runtime: *const libia_runtime) -> *mut c_char;

    pub fn libia_runtime_tokenize_text(
        runtime: *mut libia_runtime,
        text: *const c_char,
        add_special: bool,
        parse_special: bool,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;
    pub fn libia_runtime_detokenize_csv(
        runtime: *mut libia_runtime,
        tokens_csv: *const c_char,
        special: bool,
        error_out: *mut *mut c_char,
    ) -> *mut c_char;

    pub fn libia_runtime_system_info(runtime: *const libia_runtime) -> *mut c_char;
    pub fn libia_runtime_last_error(runtime: *const libia_runtime) -> *const c_char;
